--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/themes": "^3.0.1",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.1"
   },
   "devDependencies": {
     "@types/node": "^20",
