--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.0.1",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.51.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
