--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.1"
+    "react-hook-form": "^7.51.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
